@@ -25,15 +25,16 @@ if test x$withval != xyes ; then
 fi
 )
 
+OS=`uname`
+SHTARGETS=pam_krb5.so
+MAN5TARGETS=pam_krb5.5
+MAN8TARGETS=pam_krb5.8
+
 AC_CHECK_HEADERS(sys/stat.h sys/types.h stdio.h stdlib.h string.h unistd.h\
 		 fcntl.h limits.h pwd.h dlfcn.h com_err.h syslog.h sys/syslog.h\
 		 ctype.h security/pam_appl.h security/pam_modules.h)
 AC_CHECK_HEADER(krb5.h,AC_DEFINE(HAVE_KRB5_H),
 	AC_ERROR(install Kerberos 5 or re-run configure with --with-krb5))
-AC_CHECK_HEADER(kerberosIV/krb.h,AC_DEFINE(HAVE_KERBEROSIV_KRB_H),
-	AC_WARN(omitting Kerberos IV compatibility))
-
-TARGET=pam_krb5afs
 
 AC_CHECK_LIB(c,sprintf,,,$LIBS)
 AC_CHECK_LIB(socket,connect,,,$LIBS)
@@ -45,22 +46,31 @@ AC_CHECK_LIB(com_err,error_message,,,$LIBS)
 AC_CHECK_LIB(k5crypto,krb5_des_string_to_key,,,$LIBS)
 AC_CHECK_LIB(krb5,krb5_init_context,,,$LIBS)
 AC_CHECK_LIB(des425,des_string_to_key,,,$LIBS)
-AC_CHECK_LIB(krb4,in_tkt,,,$LIBS)
-AC_CHECK_LIB(krb524,krb524_convert_creds_kdc,
-	LIBS="-lkrb524 $LIBS"
-	AC_DEFINE(HAVE_LIBKRB524)
-	AC_CHECK_HEADER(krbafs.h,AC_DEFINE(HAVE_KRBAFS_H)
-		AC_CHECK_LIB(krbafs,krb_afslog,,,$LIBS),
-		AC_WARN(omitting token-grabbing functions)
-		TARGET=pam_krb5
-		)
-,,$LIBS)
-AC_CHECK_FUNCS(krb5_prompter_posix)
+AC_CHECK_HEADER(kerberosIV/krb.h,
+	AC_DEFINE(HAVE_KERBEROSIV_KRB_H)
+	AC_CHECK_LIB(krb4,in_tkt,,,$LIBS)
+	AC_CHECK_LIB(krb524,krb524_convert_creds_kdc,,,$LIBS)
+)
+if test x$ac_cv_lib_krb4_in_tkt = xyes ; then
+	AC_CHECK_HEADER(krbafs.h,
+			AC_DEFINE(HAVE_KRBAFS_H)
+			AC_CHECK_LIB(krbafs,krb_afslog,
+				SHTARGETS="$SHTARGETS pam_krb5afs.so",
+				MAN5TARGETS="$(MAN5TARGETS) pam_krb5.5"
+				MAN8TARGETS="$(MAN8TARGETS) pam_krb5.8"
+				AC_WARN(omitting token-grabbing functions),
+				$LIBS),
+			AC_WARN(omitting token-grabbing functions)
+	,,$LIBS)
+fi
 AC_SUBST(KRB5)
 AC_SUBST(KRBAFS)
 
-SHLIBDEP=`uname`
-AC_SUBST(SHLIBDEP)
-AC_SUBST(TARGET)
+OSTARGETS=`echo $SHTARGETS | sed "s^\.so^\.so\.$OS^g"`
+
+AC_SUBST(SHTARGETS)
+AC_SUBST(OSTARGETS)
+AC_SUBST(MAN5TARGETS)
+AC_SUBST(MAN8TARGETS)
 
 AC_OUTPUT(Makefile)
